syntax = "proto2";

option optimize_for = SPEED;
option java_package = "neo.netty.protobuf.example.protobuf";
option java_outer_classname = "Message";

message MessageData {

    enum MessageType {
        PersonType = 1;
        DogType = 2;
        CatType = 3;
    }

    required MessageType message_type = 1;


    oneof body {
        Person person = 2;
        Dog dog = 3;
        Cat cat = 4;
    }
}

message Person {
    optional string name = 1;
    optional int32 age = 2;
    optional string address = 3;
}


message Dog {
    optional string name = 1;
    optional string address = 2;
}

message Cat {
    optional string name = 1;
    optional string color = 2;
}

